<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Crash report related strings-->
    <string name="crash_toast_text">Rotten Movies has crashed, but a report has been sent to the developer to help fix the issue!</string>
    <string name="crash_dialog_title">Rotten Movies has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you for your feedback!</string>

    <string name="known_bugs">Known bugs and missing features:\n\n
        -On details screen pressing Home button (physical) crashres application\n
        -Refresh Button not working\n
        -Favourites not working\n
        -On Click image from Details not expanding\n
        -Last card on bottom right can\'t be clicked\n
        -Details View needs scrolling down to show full image\n
        -In Theaters no infinite scroll\n
        -Upcoming Movies no infinite scroll\n</string>

    <string name="app_name">Rotten Movies</string>
    <string name="title_section0">Home</string>
    <string name="title_section1">Box Office</string>
    <string name="title_section2">In Theaters</string>
    <string name="title_section3">Opening Movies</string>
    <string name="title_section4">Upcoming Movies</string>
    <string name="title_section5">Favourites</string>
    <string name="title_section6">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="synopsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nisl leo, imperdiet non magna ut, tempor eleifend turpis. Ut pretium porttitor metus non dictum. Sed ut orci finibus nulla tempor ultrices. Pellentesque scelerisque velit semper, blandit enim convallis, consequat purus. Morbi eget dictum dolor. Suspendisse commodo tempus neque, a euismod purus iaculis et. Maecenas congue, nulla ac cursus commodo, quam tortor consequat mi, vitae finibus risus mi a libero. Vivamus suscipit nec augue mollis tincidunt. Integer hendrerit pretium cursus. Pellentesque sed quam orci. Nullam sit amet auctor velit. Mauris ornare nec leo vel dignissim. Quisque non sodales leo, quis feugiat velit. Nunc sit amet metus vitae elit rhoncus venenatis. Praesent vel hendrerit dui. Proin et nisl malesuada, hendrerit nulla sit amet, interdum ante. Suspendisse mi lectus, cursus quis eros ac, mattis auctor augue. Praesent accumsan neque sapien, nec efficitur massa congue et. Vestibulum lacinia tincidunt metus. Morbi id lacus luctus, faucibus lectus eget, vulputate sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nisl leo, imperdiet non magna ut, tempor eleifend turpis. Ut pretium porttitor metus non dictum. Sed ut orci finibus nulla tempor ultrices. Pellentesque scelerisque velit semper, blandit enim convallis, consequat purus. Morbi eget dictum dolor. Suspendisse commodo tempus neque, a euismod purus iaculis et. Maecenas congue, nulla ac cursus commodo, quam tortor consequat mi, vitae finibus risus mi a libero. Vivamus suscipit nec augue mollis tincidunt. Integer hendrerit pretium cursus. Pellentesque sed quam orci. Nullam sit amet auctor velit. Mauris ornare nec leo vel dignissim. Quisque non sodales leo, quis feugiat velit. Nunc sit amet metus vitae elit rhoncus venenatis. Praesent vel hendrerit dui. Proin et nisl malesuada, hendrerit nulla sit amet, interdum ante. Suspendisse mi lectus, cursus quis eros ac, mattis auctor augue. Praesent accumsan neque sapien, nec efficitur massa congue et. Vestibulum lacinia tincidunt metus. Morbi id lacus luctus, faucibus lectus eget, vulputate sem.</string>
    <string name="splash_subtitle">Movie info all in one place</string>
    <string name="movie_title_placeholder">Movie Title</string>
    <string name="movie_subtitle_placeholder">Movie Subtitle</string>
    <string name="runtime_placeholder">Runtime: </string>
    <string name="rating_placeholder">Rating: </string>
    <string name="cast_placeholder">Cast: </string>

    <string name="add_to_favourites">Add to Favourites</string>
    <string name="crash_button">crash_test_button</string>
    <string name="welcome_msg">Welcome to Home screen\nThe navigation menu is on the left</string>
    <string name="about_msg">Rotten Movies is a native Android application for all users who like, share and track latest movie info. \n\n Made by: Menil V.(2014)\n Thanks to: AtlantBH</string>
    <string name="title_placeholder">POSITION. TITLE (YEAR)</string>
    <string name="runtime_placeholder2">RUNTIME:</string>
    <string name="release_placeholder">RELEASE DATE:</string>
    <string name="critics_placeholder">Critics Score:</string>
    <string name="fragment_more_description">Fragment list more button</string>
    <string name="rtn_link_description">Rotten Tomatoes link</string>
    <string name="imdb_link_description">IMDB link</string>
    <string name="header_placeholder">HEADER PLACEHOLDER</string>
    <string name="powered_by">Powered\nby:</string>
    <string name="thanks_to">Thanks\nto:</string>
    <string name="follow_us">Follow\nus:</string>
    <string name="slide_arrows">slide arrows</string>
    <string name="btm_img_icon">bottom image icon</string>
    <string name="synopsis_title">Synopsis:\n</string>
    <string name="no_movies_searched">No movies were found.\nTry another search...</string>
    <string name="bck_img_details">Background image details view</string>
    <string name="details_img">details image</string>
    <string name="favourites">Favourites</string>

</resources>
