<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="Search"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="200"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="400"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
