<!-- A CardView that contains a TextView -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardElevation="3dp">

    <RelativeLayout
        android:id="@+id/full_card_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.menil.rottenmovies.RemoteImageView
            android:id="@+id/full_card_img"
            android:layout_width="110dp"
            android:layout_height="155dp"
            android:adjustViewBounds="true"
            android:background="#f1f1f1"
            android:scaleType="fitXY" />

        <LinearLayout
            android:id="@+id/full_card_under"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_card_img"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/full_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/movie_title_placeholder"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/pale_black"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/full_card_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_subtitle_placeholder"
                android:ellipsize="end"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/app_name"
                android:textColor="@color/pale_gray"
                android:textSize="10sp" />


        </LinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>
