<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:descendantFocusability="afterDescendants"
    android:focusable="false"
    android:minHeight="158dp"
    android:minWidth="100dp">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_placeholder"
            android:textColor="@color/pale_black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#399322" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="3dp"
        android:elevation="3dp">

        <LinearLayout
            android:id="@+id/fragment_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.menil.rottenmovies.RemoteImageView
                android:id="@+id/fragment_list_item_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0.5dp"
                android:minHeight="158dp"
                android:minWidth="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/empty_img" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginStart="7dp"
                    android:orientation="vertical"
                    android:paddingTop="3dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/fragment_list_item_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:ellipsize="marquee"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:text="@string/title_placeholder"
                            android:textColor="@android:color/black"
                            android:textSize="19sp"
                            android:textStyle="bold|italic" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/fragment_list_item_runtime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/runtime_placeholder2"
                                android:textColor="@color/pale_black"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/fragment_list_item_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/release_placeholder"
                                android:textColor="@color/pale_gray"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/fragment_list_item_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/critics_placeholder"
                                android:textColor="@color/green_700"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/list_full_card_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="2dp"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:elevation="3dp">

        <android.support.v7.widget.CardView
            android:id="@+id/list_full_card_rotten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="2dp"
            android:elevation="2dp">


            <ImageView
                android:id="@+id/fragment_list_item_rtn_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/rtn_link_description"
                android:maxHeight="40dp"
                android:src="@drawable/rtlogo_small" />

        </android.support.v7.widget.CardView>

        <Space
            android:layout_width="5dp"
            android:layout_height="4dp" />
        <android.support.v7.widget.CardView
            android:id="@+id/list_full_card_imdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="2dp"
            android:elevation="2dp">


            <ImageView
                android:id="@+id/fragment_list_item_imdb_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imdb_link_description"
                android:maxHeight="40dp"
                android:src="@drawable/imdb_small" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
