<RelativeLayout
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/tools"
    android:id="@+id/fragment_details_card_relative"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/fragment_details_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fragment_details_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="0.5dp"
                    android:layout_marginTop="0.5dp"
                    android:scaleType="fitXY"

                    android:src="@drawable/empty_img" />
                <TextView
                    android:id="@+id/fragment_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/fragment_details_img"
                    android:layout_toEndOf="@id/fragment_details_img"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/movie_title_placeholder"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:ellipsize="marquee"
                    android:textStyle="bold|italic"
                    android:textColor="@color/pale_black"
                    android:textSize="20sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fragment_details_title"
                    android:layout_toEndOf="@id/fragment_details_img"
                    android:layout_toRightOf="@id/fragment_details_img"
                    android:orientation="vertical"
                    android:layout_marginTop="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp">

                    <TextView
                        android:id="@+id/fragment_details_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime_placeholder"
                        android:textColor="@color/pale_black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/fragment_details_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/rating_placeholder"
                        android:textColor="@color/pale_gray"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/fragment_details_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:scrollHorizontally="true"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/cast_placeholder"
                        android:textColor="@color/green_700"
                        android:textSize="14sp" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_details_card_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_below="@+id/fragment_details_fab">

        <TextView
            android:id="@+id/fragment_details_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:ellipsize="end"
            android:gravity="fill_horizontal"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:text="@string/synopsis"
            android:textColor="@color/pale_black"
            android:textSize="16sp" />

    </android.support.v7.widget.CardView>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fragment_details_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/fragment_details_card_title"
        android:layout_marginBottom="-45dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/ic_action_favorite"
        sothree:fab_colorRipple="@android:color/white"
        sothree:fab_colorNormal="@color/green"
        sothree:fab_colorPressed="@color/green_500" />
</RelativeLayout>