<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#f1f1f1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.menil.rottenmovies.RemoteImageView
            android:id="@+id/fragment_details_img_top"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_ori2" />

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_details_card_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/fragment_details_img_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.menil.rottenmovies.RemoteImageView
                        android:id="@+id/fragment_details_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:adjustViewBounds="true"
                        android:layout_marginBottom="0.5dp"
                        android:layout_marginTop="0.5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/empty_img" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_toEndOf="@id/fragment_details_img"
                        android:layout_toRightOf="@id/fragment_details_img"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/fragment_details_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="@string/movie_title_placeholder"
                            android:textStyle="bold|italic"
                            android:textColor="@color/pale_black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/fragment_details_runtime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/runtime_placeholder"
                            android:textColor="@color/pale_black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/fragment_details_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/rating_placeholder"
                            android:textColor="@color/pale_gray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/fragment_details_cast"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/cast_placeholder"
                            android:textColor="@color/pale_gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_details_card_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@+id/fragment_details_fab">

            <TextView
                android:id="@+id/fragment_details_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:ellipsize="end"
                android:gravity="fill_horizontal"
                android:maxLines="10"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingTop="7dp"
                android:text="@string/synopsis"
                android:textColor="@color/pale_black"
                android:textSize="15sp" />

        </android.support.v7.widget.CardView>
        <!--        <android.support.v7.widget.CardView
                    android:id="@+id/fragment_details_expand_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="-6dp"
                    android:layout_marginEnd="-6dp">

                    <ImageView
                        android:id="@+id/fragment_details_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        android:minWidth="30dp"
                        android:src="@drawable/ic_action_expand"/>
        </android.support.v7.widget.CardView>-->

            <com.melnykov.fab.FloatingActionButton
                android:id="@+id/fragment_details_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/fragment_details_card_title"
                android:layout_marginBottom="-30dp"
                android:layout_marginTop="-42dp"
                android:src="@drawable/ic_action_favorite"
                fab:fab_colorNormal="@color/green"
                fab:fab_colorPressed="@color/light_gray" />

    </RelativeLayout>

</ScrollView>